[package]
name = "event-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.2", features=["derive"]}
debug_print = "1.0.0"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
rdev = {version="0.5.3", features=["unstable_grab", "serialize"]}
screenshots = "0.8.2"
serde = "1.0.188"
serde_json = "1.0.105"
threadpool = "1.8.1"


